<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.hanane.Levelgame">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:layout_marginTop="40dp"
        android:text="@string/choose_level"
        android:textAlignment="center"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:text="@string/level_easy"
        android:textAlignment="center"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:text="@string/level_medium"
        android:textAlignment="center"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:text="@string/level_hard"
        android:textAlignment="center"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/Leveledittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="\?"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="150dp"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="25sp" />
    <Button
        android:id="@+id/play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="60dp"
        android:background="@color/btn_color"
        />



</LinearLayout>
